# Laboratorio_di_Programmazione

./: BankAccount.cpp  BankAccount.h  CMakeLists.txt  MyTestSuite.cpp  MyTestSuite.h  README.md  TestMain.cpp  TestSuite.cpp  TestSuite.h  Transaction.cpp  Transaction.h  main.cpp
cxxtest-master/cxxtest/: RealDescriptions.cpp
